--- a/report/templates/index.html
+++ b/report/templates/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    README page
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}README page{% endblock %}
+
+{% block content %}
+    <h1>Readme page</h1>
+{% endblock %}
