--- a/report/templates/base.html
+++ b/report/templates/base.html
@@ -11,24 +11,24 @@
     {% if request.user.is_authenticated %}
     <ul class="menu">
         <li {% if section == "readme" %} class="selected"{% endif %}>
-            <a href="{% url "readme" %}">Readme</a>
+            <a href="{% url 'report:readme' %}">Readme</a>
         </li>
         <li {% if section == "report" %}class="selected"{% endif %}>
-            <a href="#">Report</a>
+            <a href="{% url 'report:entry_list' %}">Report</a>
         </li>
         <li {% if section == "edit_profile" %}class="selected"{% endif %}>
-            <a href="{% url 'edit' %}">Edit profile</a>
+            <a href="{% url 'report:edit' %}">Edit profile</a>
         </li>
         <li {% if section == "password_change" %}class="selected"{% endif %}>
-        <a href="{% url 'password_change' %}">Change password</a>
+        <a href="{% url 'report:password_change' %}">Change password</a>
         </li>
     </ul>
     {% endif %}
     <span class="user">
         {% if request.user.is_authenticated %} Hello {{ request.user.first_name }},
-            <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'report:logout' %}">Logout</a>
         {% else %}
-            <a href="{% url 'login' %}">Log-in</a>
+            <a href="{% url 'report:login' %}">Log-in</a>
         {% endif %}
     </span>
 </div>
